spring study test

--- a/spring-test/spring-test.gradle
+++ b/spring-test/spring-test.gradle
@@ -4,16 +4,19 @@ apply plugin: "kotlin"
 
 dependencies {
 	compile(project(":spring-core"))
-	optional(project(":spring-aop"))
-	optional(project(":spring-beans"))
-	optional(project(":spring-context"))
-	optional(project(":spring-jdbc"))
-	optional(project(":spring-orm"))
-	optional(project(":spring-tx"))
-	optional(project(":spring-web"))
-	optional(project(":spring-webflux"))
-	optional(project(":spring-webmvc"))
-	optional(project(":spring-websocket"))
+	compile(project(":spring-aop"))
+	compile(project(":spring-beans"))
+	compile(project(":spring-context"))
+	compile(project(":spring-jdbc"))
+	compile(project(":spring-orm"))
+	compile(project(":spring-tx"))
+	compile(project(":spring-web"))
+	compile(project(":spring-webflux"))
+	compile(project(":spring-webmvc"))
+	compile(project(":spring-websocket"))
+	compile(project(":spring-instrument"))
+	compile(project(":spring-messaging"))
+	
 	optional("javax.activation:javax.activation-api")
 	optional("javax.el:javax.el-api")
 	optional("javax.inject:javax.inject")
